package create.factoryMethodPattern.method1.button;

public abstract class Button {
}
