package create.factoryMethodPattern.method1.button;

public class MacButton extends Button {
}
