package create.factoryMethodPattern.method1.button;

public class WinButton extends Button {
}
