package create.factoryMethodPattern.method1.factory;

import create.factoryMethodPattern.method1.button.Button;

public abstract class ButtonFactory {

    public abstract Button createButton();

}
